--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "dialog",
+  "name": "pcadmin-dialog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --content-base examples --inline  --config scripts/webpack.config.js",
+    "build": "webpack -p -d --config scripts/webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -13,6 +14,24 @@
   "keywords": [
     "dialog"
   ],
+  "dependencies": {
+    "pcadmin-base": "^1.0.0",
+    "pcadmin-button": "^1.0.2",
+    "vue": "^2.2.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "css-loader": "^0.28.5",
+    "extract-text-webpack-plugin": "^2.0.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "vue-loader": "^13.0.4",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.1"
+  },
   "author": "fanzhang",
   "license": "ISC",
   "bugs": {
